[gd_scene load_steps=2 format=3 uid="uid://b1bnsvkbkoh2f"]

[ext_resource type="Script" uid="uid://b3nd4v62iigqa" path="res://dot gds/LevelUpUI.gd" id="1_483sw"]

[node name="LevelUpUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_483sw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Health Boost"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Damage Up"

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Speed Boost"

[connection signal="pressed" from="Panel/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
